--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.lbovolini</groupId>
   <artifactId>ObjectMapper</artifactId>
   <packaging>jar</packaging>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
 
   <build>
     <plugins>
@@ -37,7 +36,6 @@
           <localCheckout>true</localCheckout>
           <pushChanges>false</pushChanges>
           <mavenExecutorId>forked-path</mavenExecutorId>
-          <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
         </configuration>
         <dependencies>
           <dependency>
@@ -86,7 +84,7 @@
         <executions>
           <execution>
           <id>attach-javadoc</id>
-            <goals></goals>
+            <goals />
           </execution>
         </executions>
       </plugin>
@@ -112,6 +110,6 @@
     <connection>scm:git:git://github.com/lbovolini/object-mapper.git</connection>
     <developerConnection>scm:git:git@github.com:lbovolini/lbovolini.git</developerConnection>
     <url>https://github.com/lbovolini/object-mapper</url>
-    <tag>HEAD</tag>
+    <tag>ObjectMapper-0.0.1</tag>
   </scm>
 </project>
