[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.github.lbovolini</groupId>
   <artifactId>ObjectMapper</artifactId>
   <packaging>jar</packaging>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
 
   <build>
     <plugins>
@@ -110,6 +110,6 @@
     <connection>scm:git:git://github.com/lbovolini/object-mapper.git</connection>
     <developerConnection>scm:git:git@github.com:lbovolini/lbovolini.git</developerConnection>
     <url>https://github.com/lbovolini/object-mapper</url>
-    <tag>ObjectMapper-0.0.1</tag>
+    <tag>HEAD</tag>
   </scm>
 </project>
