--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,29 @@
   <artifactId>ObjectMapper</artifactId>
   <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
+  <description>
+    Maps an object to another via getters and setters methods
+  </description>
+
+  <developers>
+    <developer>
+      <id>lucasbovolini</id>
+      <name>Lucas Bovolini</name>
+      <email>lbovolini94@gmail.com</email>
+    </developer>
+  </developers>
+  <scm>
+    <connection>scm:git:git://github.com/lbovolini/object-mapper.git</connection>
+    <developerConnection>scm:git:git@github.com:lbovolini/lbovolini.git</developerConnection>
+    <url>https://github.com/lbovolini/object-mapper</url>
+    <tag>HEAD</tag>
+  </scm>
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>http://www.opensource.org/licenses/mit-license.php</url>
+    </license>
+  </licenses>
 
   <build>
     <plugins>
@@ -106,10 +129,4 @@
   </dependencies>
   <name>ObjectMapper</name>
   <url>http://maven.apache.org</url>
-  <scm>
-    <connection>scm:git:git://github.com/lbovolini/object-mapper.git</connection>
-    <developerConnection>scm:git:git@github.com:lbovolini/lbovolini.git</developerConnection>
-    <url>https://github.com/lbovolini/object-mapper</url>
-    <tag>HEAD</tag>
-  </scm>
 </project>
