--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,6 @@ modules.xml
 hs_err_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,java
+
+target
+pom.xml.releaseBackup
