--- a/release.properties
+++ b/release.properties
@@ -1,12 +1,19 @@
 #release configuration
-#Sat Aug 15 15:42:41 BRT 2020
+#Sat Aug 15 15:47:15 BRT 2020
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
+scm.tag=ObjectMapper-0.0.1
 pushChanges=false
 scm.url=scm\:git\:git@github.com\:lbovolini/lbovolini.git
 preparationGoals=clean verify
+project.scm.com.github.lbovolini\:ObjectMapper.connection=scm\:git\:git\://github.com/lbovolini/object-mapper.git
+project.dev.com.github.lbovolini\:ObjectMapper=0.0.2-SNAPSHOT
+project.scm.com.github.lbovolini\:ObjectMapper.tag=HEAD
+project.scm.com.github.lbovolini\:ObjectMapper.developerConnection=scm\:git\:git@github.com\:lbovolini/lbovolini.git
+project.rel.com.github.lbovolini\:ObjectMapper=0.0.1
+project.scm.com.github.lbovolini\:ObjectMapper.url=https\://github.com/lbovolini/object-mapper
 remoteTagging=true
 projectVersionPolicyId=default
 scm.commentPrefix=[maven-release-plugin] 
-exec.additionalArguments=-Dgpg.passphrase\=${gpg.passphrase}
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+exec.additionalArguments=-Dgpg.passphrase\=${gpg.passphrase}
+completedPhase=end-release
