--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,32 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.lbovolini</groupId>
   <artifactId>ObjectMapper</artifactId>
   <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
+  <description>
+    Maps an object to another via getters and setters methods
+  </description>
+
+  <developers>
+    <developer>
+      <id>lucasbovolini</id>
+      <name>Lucas Bovolini</name>
+      <email>lbovolini94@gmail.com</email>
+    </developer>
+  </developers>
+  <scm>
+    <connection>scm:git:git://github.com/lbovolini/object-mapper.git</connection>
+    <developerConnection>scm:git:git@github.com:lbovolini/lbovolini.git</developerConnection>
+    <url>https://github.com/lbovolini/object-mapper</url>
+    <tag>HEAD</tag>
+  </scm>
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>http://www.opensource.org/licenses/mit-license.php</url>
+    </license>
+  </licenses>
 
   <build>
     <plugins>
@@ -37,7 +59,6 @@
           <localCheckout>true</localCheckout>
           <pushChanges>false</pushChanges>
           <mavenExecutorId>forked-path</mavenExecutorId>
-          <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
         </configuration>
         <dependencies>
           <dependency>
@@ -55,7 +76,7 @@
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
-        <version>1.6.8</version>
+        <version>1.6.7</version>
         <extensions>true</extensions>
         <configuration>
           <serverId>ossrh</serverId>
@@ -86,7 +107,7 @@
         <executions>
           <execution>
           <id>attach-javadoc</id>
-            <goals></goals>
+            <goals />
           </execution>
         </executions>
       </plugin>
@@ -108,10 +129,38 @@
   </dependencies>
   <name>ObjectMapper</name>
   <url>http://maven.apache.org</url>
-  <scm>
-    <connection>scm:git:git://github.com/lbovolini/object-mapper.git</connection>
-    <developerConnection>scm:git:git@github.com:lbovolini/lbovolini.git</developerConnection>
-    <url>https://github.com/lbovolini/object-mapper</url>
-    <tag>HEAD</tag>
-  </scm>
+
+  <profiles>
+    <profile>
+      <id>sign-artifacts</id>
+      <activation>
+        <property>
+          <name>performRelease</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.6</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+                <configuration>
+                  <homedir>${gpg.homedir}</homedir>
+                  <passphrase>${gpg.passphrase}</passphrase>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
