--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.lbovolini</groupId>
-  <artifactId>ObjectMapper</artifactId>
+  <artifactId>object-mapper</artifactId>
   <packaging>jar</packaging>
   <version>0.2.4-SNAPSHOT</version>
   <description>
@@ -73,7 +73,7 @@
           </dependency>
         </dependencies>
       </plugin>
-      <plugin>
+      <!--<plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
         <version>1.6.7</version>
@@ -83,7 +83,7 @@
           <nexusUrl>https://oss.sonatype.org/</nexusUrl>
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
-      </plugin>
+      </plugin>-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
@@ -95,15 +95,8 @@
               <goal>jar</goal>
             </goals>
           </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>3.2.1</version>
-        <executions>
           <execution>
-          <id>attach-javadoc</id>
+            <id>attach-javadoc</id>
             <goals />
           </execution>
         </executions>
@@ -128,7 +121,7 @@
   <url>http://maven.apache.org</url>
 
   <profiles>
-    <profile>
+    <!--<profile>
       <id>sign-artifacts</id>
       <activation>
         <property>
@@ -158,7 +151,7 @@
           </plugin>
         </plugins>
       </build>
-    </profile>
+    </profile>-->
   </profiles>
 
   <distributionManagement>
