--- a/pom.xml
+++ b/pom.xml
@@ -155,10 +155,10 @@
   </profiles>
 
   <distributionManagement>
-    <snapshotRepository>
+    <!--<snapshotRepository>
       <id>ossrh</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
+    </snapshotRepository>-->
     <!--<repository>
       <id>ossrh</id>
       <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/
