--- a/release.properties
+++ b/release.properties
@@ -1,12 +1,19 @@
 #release configuration
-#Wed Aug 19 17:06:17 BRT 2020
+#Wed Aug 19 17:07:21 BRT 2020
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
+scm.tag=object-mapper-0.2.4
 pushChanges=false
 scm.url=scm\:git\:git@github.com\:lbovolini/lbovolini.git
 preparationGoals=clean verify
+project.dev.com.github.lbovolini\:object-mapper=0.2.5-SNAPSHOT
+project.rel.com.github.lbovolini\:object-mapper=0.2.4
 remoteTagging=true
 projectVersionPolicyId=default
 scm.commentPrefix=[maven-release-plugin] 
-exec.additionalArguments=-P github
+project.scm.com.github.lbovolini\:object-mapper.developerConnection=scm\:git\:git@github.com\:lbovolini/lbovolini.git
+project.scm.com.github.lbovolini\:object-mapper.connection=scm\:git\:git\://github.com/lbovolini/object-mapper.git
+project.scm.com.github.lbovolini\:object-mapper.tag=HEAD
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+exec.additionalArguments=-P github
+completedPhase=end-release
+project.scm.com.github.lbovolini\:object-mapper.url=https\://github.com/lbovolini/object-mapper
