--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
         <version>3.2.1</version>
-        <executions>
+        <!--<executions>
           <execution>
             <id>attach-sources</id>
             <goals>
@@ -99,7 +99,7 @@
             <id>attach-javadoc</id>
             <goals />
           </execution>
-        </executions>
+        </executions>-->
       </plugin>
     </plugins>
   </build>
