--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.github.lbovolini</groupId>
   <artifactId>object-mapper</artifactId>
   <packaging>jar</packaging>
-  <version>1.1.27-SNAPSHOT</version>
+  <version>1.1.41-SNAPSHOT</version>
   <description>
     Maps an object to another via getters and setters methods
   </description>
@@ -149,10 +149,10 @@
   </profiles>
 
   <distributionManagement>
-    <!--<snapshotRepository>
+    <snapshotRepository>
       <id>ossrh</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>-->
+    </snapshotRepository>
     <!--<repository>
       <id>ossrh</id>
       <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/
