--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
           </dependency>
         </dependencies>
       </plugin>
-      <!--<plugin>
+      <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
         <version>1.6.7</version>
@@ -87,12 +87,12 @@
           <nexusUrl>https://oss.sonatype.org/</nexusUrl>
           <autoReleaseAfterClose>true</autoReleaseAfterClose>
         </configuration>
-      </plugin>-->
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
         <version>3.2.1</version>
-        <!--<executions>
+        <executions>
           <execution>
             <id>attach-sources</id>
             <goals>
@@ -103,7 +103,7 @@
             <id>attach-javadoc</id>
             <goals />
           </execution>
-        </executions>-->
+        </executions>
       </plugin>
 
       <plugin>
@@ -199,7 +199,7 @@
         </repository>
       </distributionManagement>
     </profile>
-    <!--<profile>
+    <profile>
       <id>sign-artifacts</id>
       <activation>
         <property>
@@ -229,6 +229,6 @@
           </plugin>
         </plugins>
       </build>
-    </profile>-->
+    </profile>
   </profiles>
 </project>
